[tool.poetry]
name = "python-backend-tut"
version = "0.1.0"
description = "This is just following the tutorial at https://www.backendpython.com/"
authors = ["Benjamin Koppe <Benjamin.Koppe@gmx.de>"]
readme = "README.md"
packages = [{include = "python_backend_tut"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
